--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,9 +3,9 @@
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Default.Default
-GameDefaultMap=/Game/Levels/Default.Default
-GlobalDefaultGameMode="/Script/Tanks.TanksGameMode"
+EditorStartupMap=/Game/Levels/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/Levels/Minimal_Default.Minimal_Default
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -55,5 +55,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
