Tank and turret BPs setup and sprite location overrides

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [URL]
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=-1.000000)
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Minimal_Default.Minimal_Default
