--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=-1.000000)
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Minimal_Default.Minimal_Default
 GameDefaultMap=/Game/Levels/Minimal_Default.Minimal_Default
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/MyTanksGameMode.MyTanksGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -56,3 +56,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
