--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [URL]
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=-1.000000)
+TranslucentSortAxis=(X=0.000000,Y=0.000000,Z=-1.000000)
+r.TranslucentSortPolicy=2
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Minimal_Default.Minimal_Default
@@ -56,4 +57,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
