--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,10 +42,14 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Fire1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="MoveY",Scale=-1.000000,Key=W)
 +AxisMappings=(AxisName="MoveX",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=S)
 +AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Aimx",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="AimY",Scale=1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
